# APInox

./: .editorconfig  .eslintrc.json  .gitignore  .verification-checklist.md  .vscodeignore  AGENTS.md  ANALYSIS_INDEX.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CERT_INSTALL_TROUBLESHOOTING.md  CHANGELOG.md  CLAUDE.md  CLI_SIDECAR_MERGE.md  CODE_ANALYSIS.md  Cargo.toml  DEBUG_MODAL_INFO.md  DEBUG_SCREEN_IMPLEMENTATION.md  DIAGNOSTIC_COMMANDS_IMPLEMENTATION.md  DRAG_AND_DROP_IMPLEMENTATION.md  LICENSE.md  LOGGING_ANALYSIS.md  LOGGING_QUICK_REFERENCE.md  MARKETPLACE_README.md  OUTSTANDING_WORK.md  PKGBUILD  PROTOCOL_MISMATCH_ERROR.md  README.md  REQUEST_CHAINING_PHASE1_COMPLETE.md  REQUEST_CHAINING_UI_GAPS.md  REQUEST_FLOW_DIAGRAM.txt  SESSION_SUMMARY.md  SIDECAR_DIAGNOSTICS.md  STANDALONE_BINARY_COMPLETE.md  STANDALONE_BINARY_TODO.md  STANDALONE_SIDECAR.md  TAURI_BUNDLING.md  TESTING_COMMANDS.md  TODO.md  WORKFLOW_UI_IMPROVEMENTS.md  batch.txt  (+25 more)
src-tauri/: CERTIFICATES.md  Cargo.toml  ENVELOPE-BUILDER.md  SOAP-EXECUTION.md  TESTING.md  WORKFLOW.md  WS-SECURITY.md  build_log.txt  tauri.conf.json  tauri.ios.conf.json  wsdl-test-README.md  wsdl-test-output.txt
src-tauri/Samples/folders/: 001_folder.json  002_folder.json  003_folder.json
src-tauri/capabilities/: default.json
src-tauri/examples/: certificate_demo.rs  envelope_demo.rs  workflow_demo.rs  ws_security_demo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: history_storage.rs  lib.rs  lib.rs.bak2  main.rs  notes_storage.rs  project_storage.rs  proxy_models.rs  scrapbook_storage.rs  secret_storage.rs  settings_manager.rs  soapui_importer.rs  updater.rs  workspace_export.rs
src-tauri/src/breakpoint/: service.rs
src-tauri/src/certificates/: manager.rs  sni_resolver.rs
src-tauri/src/commands/: breakpoint_server.rs  certificates_server.rs  filewatcher_server.rs  mock_server.rs  mod.rs  proxy_server.rs  replacer_server.rs  sniffer_server.rs
src-tauri/src/filewatcher/: pairing_engine.rs  service.rs  xml_parser.rs
src-tauri/src/http/: client.rs  commands.rs  mod.rs
src-tauri/src/mock/: server.rs  state.rs
src-tauri/src/parsers/: commands.rs  mod.rs  openapi_parser.rs  unified_explorer_commands.rs  wsdl_commands.rs
src-tauri/src/parsers/wsdl/: README.md  imports.rs  mod.rs  parser.rs  schema.rs  types.rs
src-tauri/src/performance/: commands.rs  mod.rs  runner.rs  types.rs
src-tauri/src/proxy/: server.rs  state.rs
src-tauri/src/replacer/: service.rs
src-tauri/src/soap/: cert_commands.rs  certificate_manager.rs  client.rs  commands.rs  envelope_builder.rs  mod.rs  ws_security.rs
src-tauri/src/storage/: rules.rs
src-tauri/src/testing/: assertion_runner.rs  commands.rs  frontend_runner.rs  frontend_types.rs  mod.rs  test_runner.rs  variable_extractor.rs
src-tauri/src/utils/: config.rs  http.rs  mod.rs  regex_extractor.rs  template.rs  wildcard_processor.rs  xpath_evaluator.rs
src-tauri/src/workflow/: commands.rs  engine.rs  mod.rs
src-tauri/webview/: index.html  package-lock.json  package.json  tsc_output.txt  tsconfig.json  vite-monaco-plugin.ts  vite.config.ts
src-tauri/webview/public/: splashscreen.html
src-tauri/webview/src/: App.tsx  BUTTON_AUDIT.md  index.css  main.tsx
src-tauri/webview/src/components/: AssertionsPanel.test.tsx  AssertionsPanel.tsx  AttachmentsPanel.tsx  ContextHelpButton.tsx  ErrorBoundary.tsx  ExtractorsPanel.test.tsx  ExtractorsPanel.tsx  GraphQLVariablesPanel.tsx  HeadersPanel.test.tsx  HeadersPanel.tsx  HelpModal.tsx  ImportTestCaseModal.tsx  MacOSTitleBarSearch.tsx  MainContent.tsx  MonacoRequestEditor.tsx  MonacoResponseViewer.tsx  MonacoSingleLineInput.tsx  QueryParamsPanel.tsx  RestAuthPanel.tsx  SaveErrorDialog.tsx  SchemaViewer.tsx  ScriptEditor.tsx  SearchDropdown.tsx  SecurityPanel.tsx  Sidebar.tsx  TauriNotificationProvider.tsx  TitleBar.tsx  VariablesPanel.tsx  WorkspaceLayout.tsx
src-tauri/webview/src/constants/: index.ts
src-tauri/webview/src/contexts/: MockProxyContext.tsx  NavigationContext.tsx  PerformanceContext.tsx  ProjectContext.tsx  ScrapbookContext.tsx  SearchContext.tsx  SelectionContext.tsx  SidebarContext.tsx  TestRunnerContext.tsx  ThemeContext.tsx  UIContext.tsx  WorkspaceContext.tsx
src-tauri/webview/src/data/: helpContent.tsx
src-tauri/webview/src/hooks/: useAppLifecycle.ts  useBreakpoint.ts  useContextMenu.ts  useDragAndDrop.ts  useExplorer.ts  useFolderManager.ts  useLayoutHandler.ts  useMessageHandler.ts  useMobileLayout.ts  useRequestExecution.ts  useRequestHandlers.ts  useSidebarCallbacks.ts  useTestCaseHandlers.ts  useWatcherProxy.ts  useWildcardDecorations.ts  useWorkflowHandlers.ts  useWorkspaceCallbacks.ts
src-tauri/webview/src/notes/: NotesCodeMirrorEditor.tsx  NotesContext.tsx  NotesContextToolbar.tsx  NotesEditor.tsx  NotesHexEditor.tsx  NotesPreview.tsx  detectLanguage.ts
src-tauri/webview/src/styles/: App.styles.ts  WorkspaceLayout.styles.ts  colors.ts  themes.ts
src-tauri/wsdl-downloads/: manifest.txt
(+616 files in other folders)
