[package]
name = "apinox"
version = "0.16.114"
description = "APInox - API Testing & Development Tool"
authors = ["Dev1"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apinox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
json5 = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
raw-window-handle = "0.6"
tauri-plugin-decorum = "1.1.1"

# HTTP client and networking
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls"] }
tokio = { version = "1.45", features = ["full"] }

# XML parsing and XPath
quick-xml = { version = "0.31", features = ["serialize"] }
sxd-document = "0.3"
sxd-xpath = "0.4"

# YAML parsing for OpenAPI
serde_yaml = "0.9"

# Regular expressions
regex = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async recursion
async-recursion = "1.1"

# URL parsing
url = "2.5"

# Base64 encoding/decoding
base64 = "0.22"

# SHA for hashing (WS-Security nonce/digest)
sha1 = "0.10"
sha2 = "0.10"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }


