[package]
name = "apinox"
version = "0.19.181"
description = "APInox - API Testing & Development Tool"
authors = ["Dev1"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "apinox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apinox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
apinox-wsdl-parser = { path = "../packages/wsdl-parser" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
json5 = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
raw-window-handle = "0.6"
tauri-plugin-decorum = "1.1.1"

# HTTP client and networking
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls", "charset", "http2"] }
tokio = { version = "1.45", features = ["full"] }

# HTTP proxy/mock server (from APIprox integration)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# TLS for HTTPS proxy (from APIprox integration)
rustls = "0.23"
tokio-rustls = "0.26"

# File watching (from APIprox integration)
notify = "6"

# Home directory resolution (from APIprox integration)
dirs-next = "2"

# XML parsing and XPath
quick-xml = { version = "0.31", features = ["serialize"] }
sxd-document = "0.3"
sxd-xpath = "0.4"

# YAML parsing for OpenAPI
serde_yaml = "0.9"

# Regular expressions
regex = "1.11"

# Compression (gzip for workspace export)
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async recursion
async-recursion = "1.1"

# URL parsing
url = "2.5"

# Base64 encoding/decoding
base64 = "0.22"

# SHA for hashing (WS-Security nonce/digest)
sha1 = "0.10"
sha2 = "0.10"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Lazy static initialization
once_cell = "1.19"

# Time handling
time = { version = "0.3", features = ["macros", "formatting"] }

# Certificate management and X.509
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.16"
pem = "3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
rustls-pemfile = "2"

[profile.release]
opt-level = "z"       # optimise for size rather than speed
lto = true            # link-time optimisation — eliminates dead code across crates
codegen-units = 1     # single unit gives LTO the most visibility
strip = "symbols"     # strip debug symbols (often 30-50% of binary on Windows)
panic = "abort"       # removes unwinding machinery (~10% saving)


